# potatoengine

./: .clang-format  .clang-tidy  .gitignore  AUTHORS.md  CMakeLists.txt  CMakePresets.json  README.md  config.h.in  copy-assets.cmake  sonar-project.properties
potatocraft/: .clang-format  CMakeLists.txt  sonar-project.properties
potatocraft/assets/models/block/: cube.blend  cube.blend1
potatocraft/assets/models/brick_block/: cube.blend  cube.mtl
potatocraft/assets/models/camera/: camera.mtl  credits.txt
potatocraft/assets/models/cube/: cube.blend  cube.mtl
potatocraft/assets/models/davobric_sponza/: sponza.mtl
potatocraft/assets/models/foco/: foco.blend
potatocraft/assets/models/glass_block/: cube.blend  cube.mtl
potatocraft/assets/models/lowpoly_city/: credits.txt
potatocraft/assets/models/player/: player.blend
potatocraft/assets/models/rock/: credits.txt
potatocraft/assets/models/stone_block/: cube.mtl
potatocraft/assets/models/wood_block/: cube.blend1  cube.mtl
potatocraft/assets/prefabs/: entities.json
potatocraft/assets/scenes/: cubes.json  cubes_scene.json  dabrovic_sponza_scene.json  lowpoly_city_scene.json  plane_terrain_scene.json  primitives_scene.json  sponza_scene.json  terrain_scene.json  voxel_terrain_scene.json
potatocraft/assets/shaders/: basic.frag  basic.vert  display.frag  display.vert  fbo.frag  fbo.vert  render.frag  shader.frag  shader.vert  shape.frag  skybox.frag  skybox.vert
potatocraft/assets/textures/: block_atlas.json
potatocraft/demos/: app.cpp  settings.h  utils.h
potatocraft/demos/components/inventory/: cInventory.h  cItem.h
potatocraft/demos/components/loadout/: cEquipment.h
potatocraft/demos/components/skills/: cSkills.h
potatocraft/demos/components/stats/: cExperience.h  cHealth.h  cMana.h  cStamina.h  cStats.h  cTalents.h
potatocraft/demos/serializers/: settings.h
potatocraft/demos/states/: gameState.cpp  gameState.h
potatocraft/demos/ui/: imabout.h  imassets.h  imdebugger.h  imentities.h  imlogger.h  immenubar.h  immetrics.h  imrenderer.h  imsettings.h  imtabbar.h
potatocraft/docs/: minecraft-terrain-generation-notes.md  references.md
potatocraft/potatoengine/: engineAPI.h  pch.h
potatocraft/potatoengine/assets/: assetsManager.h  model.cpp  model.h  prefab.cpp  prefab.h  scene.cpp  scene.h  shader.cpp  shader.h  texture.cpp  texture.h  types.h  utils.h
potatocraft/potatoengine/core/: application.cpp  application.h  assetsManager.h  entrypoint.h  input.cpp  input.h  keyCodes.h  log.cpp  log.h  logManager.cpp  logManager.h  mouseCodes.h  state.cpp  state.h  stateStack.cpp  stateStack.h  time.h  window.cpp  window.h
potatocraft/potatoengine/events/: applicationEvent.h  event.h  keyEvent.h  mouseEvent.h  windowEvent.h
potatocraft/potatoengine/renderer/: buffer.cpp  buffer.h  framebuffer.cpp  framebuffer.h  openGLContext.cpp  openGLContext.h  renderer.cpp  renderer.h  rendererAPI.cpp  rendererAPI.h  shaderProgram.cpp  shaderProgram.h  texture.cpp  texture.h  vao.cpp  vao.h
potatocraft/potatoengine/renderer/camera/: camera.cpp  camera.h  cameraController.cpp  cameraController.h
potatocraft/potatoengine/renderer/shader/: program.cpp  program.h  shader.cpp  shader.h
potatocraft/potatoengine/scene/: chunkManager.cpp  chunkManager.h  components.h  efactory.cpp  efactory.h  entity.cpp  entity.h  entityFactory.cpp  entityFactory.h  meta.h  player.cpp  player.h  prefab.cpp  prefab.h  scene.cpp  scene.h  sceneCamera.h  sceneLoader.cpp  sceneLoader.h  sceneManager.cpp  sceneManager.h  systems.h  utils.h
potatocraft/potatoengine/scene/components/ai/: cAI.h
potatocraft/potatoengine/scene/systems/: sEvent.h  sUpdate.h
potatocraft/potatoengine/scene/systems/common/: sApp.h  (+1 more)
potatocraft/potatoengine/ui/: imguiAPI.cpp  imguiAPI.h  imguiLogSink.cpp  imutils.h
potatocraft/potatoengine/utils/: exception.h  multiArray.h  numericComparator.h  shapeFactory.cpp  shapeFactory.h  timer.h  uuid.h
potatocraft/sandbox/: app.cpp  gameState.cpp  gameState.h  settings.h  utils.h
potatocraft/sandbox/components/inventory/: cInventory.h  cItem.h
potatocraft/sandbox/components/loadout/: cEquipment.h
potatocraft/sandbox/components/skills/: cSkills.h
potatocraft/sandbox/components/stats/: cExperience.h  cStamina.h
potatocraft/sandbox/states/: gameState.cpp  gameState.h
potatocraft/src/: GLDebugMessageCallback.cc  GLDebugMessageCallback.h  camera.cpp  camera.hpp  engineAPI.h  main.cpp  pch.h  pcpch.hpp
potatocraft/src/camera/: camera.cpp  camera.hpp
potatocraft/src/core/: application.cpp  application.h  application.hpp  base.h  base.hpp  entrypoint.h  input.cpp  input.h  input.hpp  keyCodes.h  keyCodes.hpp  log.cpp  log.h  log.hpp  logger.cpp  logger.hpp  mouseCodes.h  mouseCodes.hpp  state.cpp  state.h  state.hpp  stateStack.cpp  stateStack.h  stateStack.hpp  time.h  timer.hpp  timestep.h  timestep.hpp  window.cpp  window.h  window.hpp
potatocraft/src/core/input/: keyboard.cpp  keyboard.hpp
potatocraft/src/debug/: timer.h
potatocraft/src/event/: applicationEvent.h  applicationEvent.hpp  event.h  keyEvent.h  keyEvent.hpp  mouseEvent.h  mouseEvent.hpp
potatocraft/src/events/: applicationEvent.h  applicationEvent.hpp  event.h  event.hpp  keyEvent.h  keyEvent.hpp  mouseEvent.h  mouseEvent.hpp
potatocraft/src/input/: keyboard.cpp  keyboard.hpp
potatocraft/src/renderer/: buffer.cpp  buffer.h  openGLContext.cpp  openGLContext.h  openGLContext.hpp  renderer.cpp  renderer.h  rendererAPI.cpp  rendererAPI.h  texture.cpp  texture.h  vao.cpp  vao.h
potatocraft/src/renderer/camera/: camera.cpp  camera.h  camera.hpp  cameraController.cpp  cameraController.h
potatocraft/src/renderer/shader/: program.cpp  program.h  program.hpp  shader.cpp  shader.h  shader.hpp
potatocraft/src/sandbox/: app.cpp  gameState.cpp  gameState.h
potatocraft/src/scene/: entity.cpp  entity.h  entity.hpp  player.cpp  player.h  player.hpp  scene.cpp  scene.hpp  sceneCamera.h  sceneCamera.hpp
potatocraft/src/shader/: program.cpp  program.hpp  shader.cpp  shader.hpp
potatocraft/src/utils/: timer.h  utils.cpp  utils.hpp
(+439 files in other folders)
